--- a/style.css
+++ b/style.css
@@ -1,1 +1,96 @@
+/* font */
 
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
+/* customize common */
+
+body {
+    font-family: 'Poppins', sans-serif;
+    background-color: #F3F1FF;
+}
+
+main {
+    display: flex;
+    justify-content: center;
+}
+
+.container {
+    background-color: #FFFFFF;
+    width: 870px;
+    padding: 35px;
+}
+
+
+/* top-player */
+
+.top-players {
+    margin-bottom: 30px;
+}
+
+.title {
+    color: #562EFF;
+    margin-top: 2px;
+}
+
+hr {
+    border: 1px solid #D1D1D1;
+    margin-bottom: 25px;
+}
+
+.players {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-row-gap: 27px;
+}
+
+.player {
+    display: flex;
+    align-items: center;
+}
+
+.player img {
+    width: 56px;
+    height: 56px;
+}
+
+.playerName {
+    margin-left: 16px;
+    font-size: 14px;
+}
+
+
+/* -----------------------top-blogs---------------
+------------
+ */
+
+.blogs {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-row-gap: 27px;
+}
+
+.blog {
+    display: flex;
+}
+
+.blog-title {
+    margin-left: 16px;
+}
+
+.blog .thumbnail img {
+    width: 177px;
+    height: 117px;
+}
+
+.blog-title .blogArticle {
+    font-size: 20px;
+}
+
+.blog-title .author {
+    font-size: 16px;
+}
+
+.blog-title .author a {
+    text-decoration: none;
+    color: #9F9F9F;
+}
