--- a/style.css
+++ b/style.css
@@ -11,13 +11,15 @@ body {
 
 main {
     display: flex;
-    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 
 .container {
     background-color: #FFFFFF;
     width: 870px;
     padding: 35px;
+    margin-top: 20px
 }
 
 
@@ -93,4 +95,89 @@ hr {
 .blog-title .author a {
     text-decoration: none;
     color: #9F9F9F;
+}
+
+
+/* Latest Courses */
+
+.courses {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-column-gap: 24px;
+}
+
+.course {
+    width: 253px;
+    height: 271px;
+    box-shadow: 0px 5.34229px 13.3557px rgba(0, 0, 0, 0.05);
+    padding: 10px;
+}
+
+.course .course-banner img {
+    width: 100%;
+    height: 110px;
+}
+
+.course-info {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.course-time {
+    background: #FFE4E8;
+    border-radius: 15px;
+    width: 94px;
+    height: 28px;
+}
+
+.course-time .time {
+    font-size: 16px;
+    color: #FF4A60;
+    margin: 5px;
+}
+
+.hour {
+    color: #FF4A60;
+}
+
+.fas.filled {
+    font-size: 13px;
+    color: #FFC014;
+}
+
+.fas.empty {
+    font-size: 13px;
+    color: gray;
+}
+
+
+/* Media queries */
+
+@media only Screen and (max-width:668px) {
+    .players,
+    .blogs,
+    .courses {
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .container {
+        width: 100%;
+    }
+    .player,
+    .blog {
+        flex-direction: column;
+    }
+}
+
+@media only screen and(min-width:688px) and(max-width:992px) {
+    .players,
+    .courses {
+        grid-template-columns: repeat(2, 2fr);
+    }
+    .container {
+        width: 100%;
+    }
+    .blogs {
+        grid-template-columns: repeat(1, 1fr);
+    }
 }
